Obsolated function (new Integer) is changed